service-clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: service-clusterip
spec:
  type: ClusterIP # Default type of the service. which need not be specified
  selector: 
    app.kubernetes.io/name: test
  ports: 
    - protocol: TCP
      port: 8080
      targetPort: 3000
