service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: service-nodeport
spec:
  type: NodePort
  selector: 
    app.kubernetes.io/name: test
  ports: 
    - protocol: TCP
      # The current service port
      port: 8080
      # the port number that we are targetting
      targetPort: 3000
      # the external port to connect to the node.
      nodePort: 30007
